# vidFlow

./: .gitignore  README.md  main.py  pyproject.toml
app/: auth.py  config.py  main.py  utils.py
app/routers/: content.py  upload.py
static/: styles.css  upload.js
templates/: file_page.html  index.html
